Chestionare-Auto-Kubernetes/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chestionare-auto
  labels:
    app: angular
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: reydw/chestionare-auto-angular
          ports:
            - containerPort: 4200
