Chestionare-Auto-Kubernetes/nest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chestionare-auto-nest
  labels:
    app: nest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
        - name: nest
          image: reydw/chestionare-auto-nest:v5
          ports:
            - containerPort: 5000
