Chestionare-Auto-Kubernetes/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chestionare-auto-angular
spec:
  type: NodePort
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 4200
