Chestionare-Auto-Kubernetes/nest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chestionare-auto-nest
spec:
  type: NodePort
  selector:
    app: nest
  ports:
    - protocol: TCP
      port: 5000
